Notes: add new note viewing UI for wall

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -399,6 +399,9 @@
 "notes_closed" = "Вы не можете прикрепить заметку к записи, так как ваши заметки видны только вам.<br><br> Вы можете поменять это в <a href=\"/settings?act=privacy\">настройках</a>.";
 "do_not_attach_note" = "Не прикреплять заметку";
 
+/* Notes: Article Viewer */
+"aw_legacy_ui" = "Старый интерфейс";
+
 /* Menus */
 
 "edit_button" = "ред.";
