--- a/locales/en.strings
+++ b/locales/en.strings
@@ -414,6 +414,9 @@
 "notes_closed" = "You can't attach note to post, because only you can see them.<br> You can change it in <a href=\"/settings?act=privacy\">settings</a>.";
 "do_not_attach_note" = "Do not attach note";
 
+/* Notes: Article Viewer */
+"aw_legacy_ui" = "Legacy interface";
+
 /* Menus */
 
 /* Note that is string need to fit into the "My Page" link */
