--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -332,6 +332,7 @@
 
 "owners_delete" = "Только создатель группы может удалить её.";
 "owners_restore" = "Только создатель группы может восстановить её?";
+"banned_restore" = "Вы не можете разблокировать заблокированную группу.";
 
 "delete_group" = "Удалить группу";
 "restore_group" = "Восстановить группу";
