--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -841,6 +841,31 @@
 "ticket_changed_comment" = "Изменения вступят силу через несколько секунд.";
 "banned_in_support_1" = "Извините, <b>$1</b>, но теперь вам нельзя создавать обращения.";
 "banned_in_support_2" = "А причина этому проста: <b>$1</b>. К сожалению, на этот раз нам пришлось отобрать у вас эту возможность навсегда.";
+"support_article" = "Статья";
+"support_edit_mode" = "Редактирование";
+"support_faq_title_placeholder" = "Давным-давно,";
+"support_faq_text_placeholder" = "В далёкой-далёкой галактике...";
+"support_unlogged_can_see" = "Могут видеть неавторизованные";
+"support_users_can_see" = "Могут видеть пользователи";
+"support_category" = "Категория";
+"support_faq_category" = "Категория FAQ";
+"support_edit" = "редактировать";
+"support_add_article" = "статья";
+"support_empty" = "Здесь пока ничего нет";
+"support_for_agents_only" = "Только для агентов";
+"support_icon_number" = "Номер иконки";
+"support_create_article" = "Создать статью";
+"support_create_category" = "Создать категорию";
+"support_new_article" = "Новая статья";
+"support_new_category" = "Новая категория";
+"support_article_acc" = "статью";
+"support_category_acc" = "категорию";
+"support_language" = "Язык";
+"support_category_not_specified" = "Вы не указали категорию";
+"support_cant_change_lang_no_cats" = "В этой локализации еще не создано ни одной категории, в которую можно было бы переместить статью";
+"support_copy" = "дублировать";
+"support_delete_articles" = "Удалить статьи";
+"support_copy_articles" = "Копировать со статьями";
 
 /* Invite */
 
