--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -841,6 +841,19 @@
 "ticket_changed_comment" = "Изменения вступят силу через несколько секунд.";
 "banned_in_support_1" = "Извините, <b>$1</b>, но теперь вам нельзя создавать обращения.";
 "banned_in_support_2" = "А причина этому проста: <b>$1</b>. К сожалению, на этот раз нам пришлось отобрать у вас эту возможность навсегда.";
+"support_my_templates" = "Мои шаблоны";
+"support_create_templates_dir" = "Создать папку";
+"support_create_template" = "Создать шаблон";
+"support_public_templates_dir" = "Видят другие агенты";
+"support_remove_templates_dir_1" = "Удалить папку";
+"support_remove_templates_dir_2" = "вместе с шаблонами";
+"support_templates_dir_name" = "Название папки с шаблонами";
+"support_template_replacement_user_name" = "Имя пользователя";
+"support_template_replacement_last_name" = "Фамилия пользователя";
+"support_template_replacement_unban_time" = "Время разблокировки";
+"support_template_text" = "Текст шаблона";
+"support_template_name" = "Название шаблона";
+"support_apply_template" = "Применить";
 
 /* Invite */
 
