--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1213,3 +1213,5 @@
 "url_is_banned_default_reason" = "Ссылка, по которой вы попытались перейти, может вести на сайт, который был создан с целью обмана пользователей и получения за счёт этого прибыли.";
 "url_is_banned_title" = "Ссылка на подозрительный сайт";
 "url_is_banned_proceed" = "Перейти по ссылке";
+
+"recently" = "Недавно";
