--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1430,3 +1430,121 @@
 "mobile_like" = "Нравится";
 "mobile_user_info_hide" = "Скрыть";
 "mobile_user_info_show_details" = "Показать подробнее";
+
+"save_all" = "Сохранить все";
+"admin_tuning_cfg_not_found" = "Файл openvk.yml не найден";
+"admin_tuning_cfg_not_found" = "Используется openvk-example.yml. Конфигурация будет применена после сохранения.";
+"admin_tuning_cfg_error_description" = "Создайте файл openvk.yml или <a href='https://raw.githubusercontent.com/openvk/openvk/master/openvk-example.yml'>скачайте его из репозитория</a>";
+"admin_tuning_cfg_file_write_err" = "Не удалось записать файл конфигурации, редактирование заблокировано";
+"admin_tuning_cfg_file_create_err" = "Не удалось создать файл конфигурации, редактирование заблокировано";
+"admin_tuning_cfg_file_not_found_in_repo" = "Файл с конфигурацией не найден в репозитории, редактирование заблокировано";
+"admin_tuning_cfg_write_fail" = "Ошибка при записи файла конфигурации";
+"admin_tuning_cfg_create_fail" = "Ошибка при создании файла конфигурации";
+"admin_tuning_cfg_tmp_read_fail_yaml" = "Ошибка при чтении временного файла: возможно, передан некорректный YAML";
+"admin_tuning_cfg_tmp_read_fail" = "Не удалось прочитать временный файл";
+"admin_settings_tuning_openvk" = "OpenVK";
+"admin_settings_tuning_debug" = "Режим отладки";
+"admin_settings_tuning_appearance" = "Внешний вид";
+"admin_settings_tuning_name" = "Название";
+"admin_settings_tuning_motd" = "Описание инстанса";
+"admin_settings_tuning_preferences" = "Настройки";
+"admin_settings_tuning_femaleGenderPriority" = "Приоритет женского пола";
+"admin_settings_tuning_nginxCacheTime" = "Время кэширования nginx";
+"admin_settings_tuning_uploads" = "Загрузки";
+"admin_settings_tuning_disableLargeUploads" = "Отключить большие загрузки";
+"admin_settings_tuning_mode" = "Режим";
+"admin_settings_tuning_api" = "API";
+"admin_settings_tuning_maxFilesPerDomain" = "Максимальное количество файлов на домен";
+"admin_settings_tuning_maxFileSize" = "Максимальный размер файла";
+"admin_settings_tuning_shortcodes" = "Короткие адреса";
+"admin_settings_tuning_minLength" = "Минимальная длина";
+"admin_settings_tuning_forbiddenNames" = "Запрещенные значения";
+"admin_settings_tuning_array_element" = "Элемент списка";
+"admin_settings_tuning_photos" = "Фотографии";
+"admin_settings_tuning_upgradeStructure" = "Улучшение структуры";
+"admin_settings_tuning_photoSaving" = "Сохранение фото";
+"admin_settings_tuning_videos" = "Видео";
+"admin_settings_tuning_disableUploading" = "Отключить загрузку";
+"admin_settings_tuning_apps" = "Приложения";
+"admin_settings_tuning_withdrawTax" = "Комиссия на вывод";
+"admin_settings_tuning_security" = "Безопасность";
+"admin_settings_tuning_requireEmail" = "Требуется электронная почта";
+"admin_settings_tuning_requirePhone" = "Требуется номер телефона";
+"admin_settings_tuning_forcePhoneVerification" = "Принудительная верификация телефона";
+"admin_settings_tuning_forceEmailVerification" = "Принудительная проверка электронной почты";
+"admin_settings_tuning_forceStrongPassword" = "Принудительное использование надежного пароля";
+"admin_settings_tuning_disablePasswordRestoring" = "Отключить восстановление пароля";
+"admin_settings_tuning_enableSu" = "Включить замену пользователя";
+"admin_settings_tuning_rateLimits" = "Рейт-лимиты";
+"admin_settings_tuning_actions" = "Действия";
+"admin_settings_tuning_time" = "Время";
+"admin_settings_tuning_maxViolations" = "Максимальное количество нарушений";
+"admin_settings_tuning_maxViolationsAge" = "Максимальный возраст нарушений";
+"admin_settings_tuning_autoban" = "Автоматический бан";
+"admin_settings_tuning_registration" = "Регистрация";
+"admin_settings_tuning_enable" = "Включить";
+"admin_settings_tuning_disablingReason" = "Причина отключения";
+"admin_settings_tuning_support" = "Поддержка";
+"admin_settings_tuning_supportName" = "Имя отвечающего по умолчанию";
+"admin_settings_tuning_adminAccount" = "Аккаунт администратора";
+"admin_settings_tuning_messages" = "Сообщения";
+"admin_settings_tuning_wall" = "Стена";
+"admin_settings_tuning_anonymousPosting" = "Анонимные публикации";
+"admin_settings_tuning_account" = "Аккаунт";
+"admin_settings_tuning_postSizes" = "Размеры постов";
+"admin_settings_tuning_maxSize" = "Максимальные размеры";
+"admin_settings_tuning_processingLimit" = "Предел обработки";
+"admin_settings_tuning_emojiProcessingLimit" = "Предел обработки Emoji";
+"admin_settings_tuning_commerce" = "Коммерция включена";
+"admin_settings_tuning_susLinks" = "Подозрительные ссылки";
+"admin_settings_tuning_warnings" = "Предупреждения";
+"admin_settings_tuning_showReason" = "Показывать причину";
+"admin_settings_tuning_maintenanceMode" = "Технические работы";
+"admin_settings_tuning_all" = "Все";
+"admin_settings_tuning_messenger" = "Мессенджер";
+"admin_settings_tuning_user" = "Пользователь";
+"admin_settings_tuning_group" = "Сообщества";
+"admin_settings_tuning_comment" = "Комментарии";
+"admin_settings_tuning_gifts" = "Подарки";
+"admin_settings_tuning_notes" = "Заметки";
+"admin_settings_tuning_notification" = "Уведомления";
+"admin_settings_tuning_topics" = "Обсуждения";
+"admin_settings_tuning_ton" = "TON";
+"admin_settings_tuning_enabled" = "Включено";
+"admin_settings_tuning_menu" = "Меню";
+"admin_settings_tuning_links" = "Ссылки";
+"admin_settings_tuning_about" = "О сайте";
+"admin_settings_tuning_url" = "URL";
+"admin_settings_tuning_adPoster" = "Рекламный баннер";
+"admin_settings_tuning_src" = "Источник";
+"admin_settings_tuning_caption" = "Подпись";
+"admin_settings_tuning_link" = "Ссылка";
+"admin_settings_tuning_defaultMobileTheme" = "Тема для мобильных устройств по умолчанию";
+"admin_settings_tuning_telemetry" = "Телеметрия";
+"admin_settings_tuning_piwik" = "Piwik";
+"admin_settings_tuning_matomo" = "Matomo";
+"admin_settings_tuning_container" = "Контейнер";
+"admin_settings_tuning_site" = "Сайт";
+"admin_settings_tuning_credentials" = "Данные";
+"admin_settings_tuning_smsc" = "SMSC";
+"admin_settings_tuning_client" = "Клиент";
+"admin_settings_tuning_layer" = "Слой";
+"admin_settings_tuning_secret" = "Секретный ключ";
+"admin_settings_tuning_token" = "Токен";
+"admin_settings_tuning_helpdeskChat" = "Чат Helpdesk";
+"admin_settings_tuning_telegram" = "Telegram";
+"admin_settings_tuning_eventDB" = "eventDB";
+"admin_settings_tuning_kafka" = "Kafka";
+"admin_settings_tuning_database" = "База данных";
+"admin_settings_tuning_dsn" = "DSN";
+"admin_settings_tuning_password" = "Пароль";
+"admin_settings_tuning_notificationsBroker" = "Брокер уведомлений";
+"admin_settings_tuning_domain" = "Домен";
+"admin_settings_tuning_server" = "Сервер";
+"admin_settings_tuning_address" = "Адрес";
+"admin_settings_tuning_testnet" = "Testnet";
+"admin_settings_tuning_regex" = "Regex";
+"admin_settings_tuning_hint" = "Подсказка";
+"admin_settings_tuning_addr" = "Адрес";
+"admin_settings_tuning_port" = "Порт";
+"admin_settings_tuning_topic" = "Тема";
