--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -1438,3 +1438,16 @@
 "mobile_like" = "Подобається";
 "mobile_user_info_hide" = "Приховувати";
 "mobile_user_info_show_details" = "Показати докладніше";
+"admin_settings_tuning_openvk" = "OpenVK";
+"admin_settings_tuning_api" = "API";
+"admin_settings_tuning_ton" = "TON";
+"admin_settings_tuning_url" = "URL";
+"admin_settings_tuning_piwik" = "Piwik";
+"admin_settings_tuning_matomo" = "Matomo";
+"admin_settings_tuning_smsc" = "SMSC";
+"admin_settings_tuning_telegram" = "Telegram";
+"admin_settings_tuning_eventDB" = "eventDB";
+"admin_settings_tuning_kafka" = "Kafka";
+"admin_settings_tuning_dsn" = "DSN";
+"admin_settings_tuning_testnet" = "Testnet";
+"admin_settings_tuning_regex" = "Regex";
