--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -191,6 +191,7 @@
 "version_incompatibility" = "Не удалось отобразить это вложение. Возможно, база данных несовместима с текущей версией OpenVK.";
 "graffiti" = "Граффити";
 "reply" = "Ответить";
+"geolocation" = "Геолокация";
 
 /* Friends */
 
