--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -314,6 +314,7 @@
 "search_group" = "Поиск группы";
 "search_by_groups" = "Поиск по группам";
 "search_group_desc" = "Здесь Вы можете просмотреть существующие группы и выбрать группу себе по вкусу...";
+"group_banned" = "К сожалению, нам пришлось заблокировать сообщество <b>$1</b>.";
 
 /* Albums */
 
