Fixes and enhancements

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -905,6 +905,7 @@
 "report_number" = "Report #";
 "list_of_reports" = "List of reports";
 "text_of_the_post" = "Text of the post";
+"today" = "today";
 
 "comment" = "Comment";
 "sender" = "Sender";
