--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -842,6 +842,12 @@
 "ticket_changed_comment" = "Изменения вступят силу через несколько секунд.";
 "banned_in_support_1" = "Извините, <b>$1</b>, но теперь вам нельзя создавать обращения.";
 "banned_in_support_2" = "А причина этому проста: <b>$1</b>. К сожалению, на этот раз нам пришлось отобрать у вас эту возможность навсегда.";
+"you_can_close_this_ticket_1" = "Если у Вас больше нет вопросов, Вы можете ";
+"you_can_close_this_ticket_2" = "закрыть этот тикет";
+"agent_profile_created_1" = "Профиль создан";
+"agent_profile_created_2" = "Теперь пользователи видят Ваши псевдоним и аватарку вместо стандартных аватарки и номера.";
+"agent_profile_edited" = "Профиль отредактирован";
+"agent_profile" = "Карточка агента";
 
 /* Invite */
 
